# archive-of-life-artifact-world

./: .gitignore  .sqlfluff  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
data-pipeline/: .env.example  README.md  pyproject.toml
data-pipeline/audits/: README.md
data-pipeline/exports/: README.md
data-pipeline/exports/nasa/: cmr_hls_collections.json  eonet_events.json  import_status.json  nasa_metadata_manifest.json  power_climate_savanna.json
data-pipeline/exports/sample_scope/: col_extant_scope.json  ics_time_scale_snapshot.json  iucn_scope.json  pbdb_scope.json
data-pipeline/ingest/catalogue_of_life/: mock_col_sample.json
data-pipeline/ingest/gbif/: mock_gbif_sample.json
data-pipeline/ingest/ics_time_scale/: ics_fetch.py  mock_ics_sample.json
data-pipeline/ingest/iucn/: mock_iucn_sample.json
data-pipeline/ingest/nasa/: cmr_search.py  ecostress_stress.py  eonet_events.py  firms_events.py  gedi_forest_structure.py  gibs_layers.py  (+3 more)
data-pipeline/notebooks/: .gitkeep
data-pipeline/snapshots/: README.md
data-pipeline/sql/: 00_sources.sql  01_taxonomy.sql  02_conservation.sql  03_occurrences.sql  04_fossils.sql  05_time_ranges.sql  06_biomes_places.sql  07_archivedex_entries.sql  08_coverage_matrix.sql  09_gap_report.sql
data-pipeline/tests/: test_pipeline.py  test_source_import.py
data-pipeline/transform/: col_to_archive.py  col_transform.py  gbif_to_distribution.py  ics_to_time_units.py  iucn_to_conservation.py  neotoma_to_paleoecology.py  pbdb_to_fossil.py
(+249 files in other folders)
